# vinea

./: .env  config.py  pyproject.toml
data/bronze/: 00000052920258260266_time_1756489504.xml  00000052920258260266_time_1756758953.xml  00000114220238260610_time_1756758954.xml  00000114820248260338_time_1756758954.xml  00000119420248260161_time_1756758954.xml  00000119720238260430_time_1756758955.xml  00000119820248260580_time_1756758955.xml  00000122220258260589_time_1756758955.xml  00000170820238260559_time_1756758955.xml  00000181020238260618_time_1756758956.xml  00000182620248260472_time_1756758956.xml
scripts/: rotina1_listar_documentos.py  rotina_2_ler_lista_documentos.py  rotina_3_ler_mni.py  teste.py
src/vinea/: __init__.py  consulta.py  leitura.py  mni.py  mni2.py  tjspmni.py
