[project]
name = "vinea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José de Jesus Filho", email = "jjesusfilho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "zeep[xmlsec]>=4.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
